# ChangeLog for dev-python/python-krbV
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*python-krbV-1.0.13 (05 Aug 2009)

  05 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +python-krbV-1.0.13.ebuild, +files/setup.py, +metadata.xml:
  initial commit
